fixed horizontal scroll issue

--- a/src/scss/root.scss
+++ b/src/scss/root.scss
@@ -234,7 +234,7 @@ body {
   width: 100vw;
 
   // This prevents horizontal scrolling
-  overflow-x: hidden; // == Added by Jacob Carter (Choice-Studio) ==
+  overflow-x: hidden !important; //Added by Jacob Carter (Choice-Studio)
 }
 
 /*-- -------------------------- -->
